# all-the-commits

./: .gitignore  GIT_VARS  README.md  gen-p.cpp  gen.cpp  gen_commits.go  run.sh  stats.py  stuff.go  stuff.py
c++/: Makefile  README  TODO  design-notes  gen-p-ordered.cpp  gen-p.cpp  gen.cpp  generateCommits.cpp  hashUtils.cpp  hashUtils.h  lockingThreads.cpp  mine.cpp  parallel.cpp  structure-notes  workerController.cpp
c++/demo_code/: mine.cpp  outputDemo.cpp  testSHA1.cpp
c++/demo_code/sha1/: Makefile  crypto.cpp  ossl.cpp  testOpenSSL.cpp  testbotan.cpp
python/: async_ref.py  gen_commits.py  hash_utils.py  run_linear.py  run_mixed.py  run_parallel.py
render_commits/: TODO  config.py  copy_pack.py  decode_idx.py  decode_obj.py  decode_pack.py  read_output.py  render.py  test.py  utils.py  write_pack.py
rust/: Cargo.toml
rust/src/: gen_commits.rs  main.rs
template/: README.md
