[package]
name = "gen_commits"
version = "0.1.0"
authors = ["Platocrat <platocrat@tuta.io>, Ben Thayer <benthayer@gmail.com>"]
edition = "2018"
description = "Rust version to generate all-the-commits"
readme = "../README.md"
repository = "https://github.com/benthayer/all-the-commits"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.15"
byteorder = "1.3.4"
hex = "0.4.2"
log = "0.4.11"
crossbeam = "0.7.3"